--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ compileJava {
 }
 
 dependencies {
+    implementation 'io.dropwizard:dropwizard-core:1.3.9'
+    
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.11.1'
     
