--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ compileJava {
 
 dependencies {
     implementation 'io.dropwizard:dropwizard-core:1.3.9'
+
+    implementation 'org.flywaydb:flyway-core:5.2.4'
+    implementation 'org.jdbi:jdbi3-core:3.6.0'
+    implementation 'org.jdbi:jdbi3-sqlobject:3.6.0'
+    implementation 'com.h2database:h2:1.4.199'
+    implementation 'org.apache.tomcat:tomcat-jdbc:9.0.17'
     
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.11.1'
