--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ compileJava {
 
 dependencies {
     implementation 'io.dropwizard:dropwizard-core:1.3.9'
+    implementation 'io.dropwizard:dropwizard-views:1.3.9'
+    implementation 'io.dropwizard:dropwizard-views-mustache:1.3.5'
 
     implementation 'org.flywaydb:flyway-core:5.2.4'
     implementation 'org.jdbi:jdbi3-core:3.6.0'
